feat(nav): modified order

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav ms-auto py-0 pe-4">
                             <a id="homeNav" onclick="setActive('homeNav')" href="#home-section" class="nav-item nav-link">Home</a>
+                            <a id="aboutNav" onclick="setActive('aboutNav')" href="#about-section" class="nav-item nav-link">About</a>
                             <a id="orderNav" onclick="setActive('orderNav')" href="#container-order-online-id" class="nav-item nav-link">Order Online</a>
-                            <a id="aboutNav" onclick="setActive('aboutNav')" href="#about-section" class="nav-item nav-link">Who We Are</a>
                             <a id="menuNav" onclick="setActive('menuNav')" href="#menu-section" class="nav-item nav-link">Menu</a>
                             <a id="contactNav"onclick="setActive('contactNav')" href="#connect-section" class="nav-item nav-link">Contact</a>
                             <!-- <a id="newsDiv" onclick="openNewsLink()" href="#" class="nav-item nav-link">News</a> -->
