feat(minified): final version

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css?v=2.0" rel="stylesheet">
-    <script src="js/constants.js?v=1.0"></script>
+    <link href="css/style.min.css?v=3.0" rel="stylesheet">
 </head>
 
 <body class="bg-white">
@@ -393,7 +392,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.min.js"></script>
-    <script src="js/behaviour.js?v=2.0"></script>
+    <script src="js/behaviour.min.js?v=3.0"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
