feat(fade): removed fade effect for f=delivery partners

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
         <!-- About End -->
 
-        <div class="container-fluid py-2 wow fadeInUp container-order-online" id="container-order-online-id">
+        <div class="container-fluid py-2 container-order-online" id="container-order-online-id">
             <div class="container">
                 <div class="text-center">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Order Online</h5>
