feat(favicon): added favicon ico image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="x-icon" href="img/logo/TGM-X-Icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo/TGM-favicon.ico">
     <title>The Grand Malabar</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
