--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/TGM-favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logo/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="img/logo/favicon_io/site.webmanifest">
     <title>The Grand Malabar</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
