feat(sitemap): added sitemap

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body class="bg-white">
-        <div class="container-fluid bg-white p-0" id="home-section">
+        <div class="container-fluid bg-white p-0" id="home">
             <!-- Spinner Start -->
             <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
                 <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
@@ -75,11 +75,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav ms-auto py-0 pe-4">
-                            <a id="homeNav" onclick="setActive('homeNav')" href="#home-section" class="nav-item nav-link">Home</a>
-                            <a id="aboutNav" onclick="setActive('aboutNav')" href="#about-section" class="nav-item nav-link">About</a>
-                            <a id="orderNav" onclick="setActive('orderNav')" href="#container-order-online-id" class="nav-item nav-link">Order Online</a>
-                            <a id="menuNav" onclick="setActive('menuNav')" href="#menu-section" class="nav-item nav-link">Menu</a>
-                            <a id="contactNav"onclick="setActive('contactNav')" href="#connect-section" class="nav-item nav-link">Contact</a>
+                            <a id="homeNav" onclick="setActive('homeNav')" href="#home" class="nav-item nav-link">Home</a>
+                            <a id="aboutNav" onclick="setActive('aboutNav')" href="#about" class="nav-item nav-link">About</a>
+                            <a id="orderNav" onclick="setActive('orderNav')" href="#orderOnline" class="nav-item nav-link">Order Online</a>
+                            <a id="menuNav" onclick="setActive('menuNav')" href="#menu" class="nav-item nav-link">Menu</a>
+                            <a id="contactNav"onclick="setActive('contactNav')" href="#contact" class="nav-item nav-link">Contact</a>
                             <!-- <a id="newsDiv" onclick="openNewsLink()" href="#" class="nav-item nav-link">News</a> -->
                         </div>
                     </div>
@@ -105,7 +105,7 @@
         <!-- Navbar & Hero End -->
 
         <!-- About Start -->
-        <div class="container-fluid py-5" id="about-section">
+        <div class="container-fluid py-5" id="about">
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
@@ -155,7 +155,7 @@
         </div>
         <!-- About End -->
 
-        <div class="container-fluid py-2 container-order-online" id="container-order-online-id">
+        <div class="container-fluid py-2 container-order-online" id="orderOnline">
             <div class="container">
                 <div class="text-center">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Order Online</h5>
@@ -185,7 +185,7 @@
         </div>
 
         <!-- Menu Start -->
-        <div class="container-fluid py-5" id="menu-section">
+        <div class="container-fluid py-5" id="menu">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5>
@@ -272,7 +272,7 @@
         </div>
         
         <!-- Contact Start -->
-        <div class="container-fluid py-5" id="connect-section">
+        <div class="container-fluid py-5" id="contact">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Contact Us</h5>
