feat(favicon): favicon updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/logo/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/logo/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="img/logo/favicon_io/site.webmanifest">
+    <link rel="mask-icon" href="img/logo/favicon_io/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="img/logo/favicon_io/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="img/logo/favicon_io/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <title>The Grand Malabar Indian Cuisine | Waterloo ON | Canada</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="The Grand Malabar, our take on delicious food from the Indian subcontinent. Nestled at the heart of our culinary journey is a deep-rooted connection with the vibrant heritage of South India, where every dish tells a story of cultural richness and culinary excellence. We invite you on a culinary adventure that showcases the unique blend of spices, aromatic herbs, and fresh ingredients that define the Malabar region." name="description">
