feat(halalLogo): added halal logo

--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4" style="z-index: 2 !important; ">Contact</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>347 Erb St. W #4, Waterloo, ON N2L 1W4</p>
                         <p class="mb-2" ></i><a href="tel:+15192659598" style="color: #F1F8FF;"><i class="fa fa-phone-alt me-3"></i>+1-519-265-9598</a></p>
+                        <div class="container m-0 p-0">
+                            <img class="halal_logo" style="position: relative;width: 70px;height: 70px;" src="img/logo/halal_logo.png">
+                        </div>
                     </div>
                     <div class="col" style="z-index: 2 !important;">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Follow us</h4>
