feat(whatsapp): added whatsApp contact

--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
                     </div>
                     <div>
                         <a class="btn btn-dark" style="cursor: default;">Reservations / Catering / Party Orders</a>
-                        <h6>Contact us on <i class="fa fa-phone-alt text-primary m-1"></i> <span onclick="window.location.href = 'tel:+15192659598';" style="cursor: pointer;">+1-519-265-9598</span></h6>
+                        <h6>Contact us on <i class="fa fa-phone-alt text-primary m-1"></i> <span onclick="window.location.href = 'tel:+15192659598';" style="cursor: pointer;">+1-519-265-9598</span>
+                            <br><i class="fab fa-whatsapp m-1" style="font-size:20px;color: green;"></i> <a href="https://wa.me/15197222565" style="color: #0F172B;">+1-519-722-2565</a>
+                        </h6>
                     </div>
                 </div>
             </div>
@@ -355,6 +357,7 @@
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4" style="z-index: 2 !important; ">Contact</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>347 Erb St. W #4, Waterloo, ON N2L 1W4</p>
                         <p class="mb-2" ></i><a href="tel:+15192659598" style="color: #F1F8FF;"><i class="fa fa-phone-alt me-3"></i>+1-519-265-9598</a></p>
+                        <p class="mb-2" ></i><a href="https://wa.me/15197222565" style="color: #F1F8FF;"><i class="fab fa-whatsapp me-3" style="font-size:20px"></i>+1-519-722-2565</a></p>
                         <div class="container m-0 p-0">
                             <img class="halal_logo" style="position: relative;width: 70px;height: 70px;" src="img/logo/halal_logo.png">
                         </div>
